// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableContainer /> by default matches with snapshot 1`] = `
<div
  className="styled__StyledContainer-z412rl-0 kCeoMa styled__StyledContainer-d41exg-0 bnzmcg"
>
  <div
    className="styled__StyledScrollableContainer-d41exg-1 cGLWQG"
  />
</div>
`;

exports[`<ScrollableContainer /> with children matches with snapshot 1`] = `
<div
  className="styled__StyledContainer-z412rl-0 kCeoMa styled__StyledContainer-d41exg-0 bnzmcg"
>
  <div
    className="styled__StyledScrollableContainer-d41exg-1 cGLWQG"
  >
    <nav>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<ScrollableContainer /> with some props matches with snapshot 1`] = `
<div
  aria-hidden={true}
  className="styled__StyledContainer-z412rl-0 kdbnwV styled__StyledContainer-d41exg-0 bnzmcg custom__class"
>
  <div
    className="styled__StyledScrollableContainer-d41exg-1 cWvqPu"
  />
</div>
`;
